--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:24.1.1'
     compile project(':externaldirectoryhelperLib')
+
+
 }
