--- a/externaldirectoryhelperLib/build.gradle
+++ b/externaldirectoryhelperLib/build.gradle
@@ -1,5 +1,29 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'AndroidMountedStorageHelper'
+
+    publishedGroupId = 'com.ramzi.mountlib'
+    libraryName = 'AndroidMountedStorageHelper'
+    artifact = 'AndroidMountedStorageHelper'
+
+    libraryDescription = 'List all mounted storage in android and also listener if a mount occur android'
+
+    siteUrl = 'https://github.com/rameshvoltella/AndroidMountedStorageHelper'
+    gitUrl = 'https://github.com/rameshvoltella/AndroidMountedStorageHelper.git'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'rameshvoltella'
+    developerName = 'Ramesh M Nair'
+    developerEmail = 'codemasterramz@gmail.com'
+
+    licenseName = 'The MIT License (MIT)'
+    licenseUrl = 'https://raw.githubusercontent.com/rameshvoltella/AndroidMountedStorageHelper/master/LICENSE'
+    allLicenses = ["MIT"]
+}
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
@@ -29,3 +53,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
 }
+// Place it at the end of the file
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
