--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ android:
   
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-22
-    - sys-img-armeabi-v7a-android-17
+    #- sys-img-armeabi-v7a-android-22
+    #- sys-img-armeabi-v7a-android-17
 
 env:
   global:
@@ -33,3 +33,4 @@ before_script:
 script:
   - android list target
   - ./gradlew build connectedCheck --stacktrace --info
+  - chmod +x ./gradlew
