--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,11 @@ android:
   
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    #- sys-img-armeabi-v7a-android-22
+     - sys-img-armeabi-v7a-android-22
     #- sys-img-armeabi-v7a-android-17
+
+before_install:
+ - chmod +x gradlew
 
 env:
   global:
