--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ android:
 
   
     # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
+    # if you need to run emulator(s) during your testss
      - sys-img-armeabi-v7a-android-22
     #- sys-img-armeabi-v7a-android-17
 
