--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script:
-  - android list target
-  - ./gradlew build connectedCheck --stacktrace --info
-  - chmod +x ./gradlew
+#script:
+#  - android list target
+#  - ./gradlew build connectedCheck --stacktrace --info
+#  - chmod +x ./gradlew
