--- a/.travis.yml
+++ b/.travis.yml
@@ -18,23 +18,9 @@ android:
      - sys-img-armeabi-v7a-android-22
     #- sys-img-armeabi-v7a-android-17
 
-before_install:
- 
-     - chmod +x gradlew
 
-env:
-  global:
-   # install timeout in minutes (2 minutes by default)
-    - ADB_INSTALL_TIMEOUT=8
-
-# Emulator Management: Create, Start and Wait
-before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
 
 #script:
-#  - android list target
-#  - ./gradlew build connectedCheck --stacktrace --info
-#  - chmod +x ./gradlew
+   - android list target
+   - ./gradlew build connectedCheck --stacktrace --info
+   - chmod +x ./gradlew
