--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,11 @@
-language: android
 android:
   components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - platform-tools
-    # - tools
+    # Update Android SDK Tools
+    - tools
 
-    # The BuildTools version used by your project
     - build-tools-25.0.0
-
-    # The SDK version used to compile your project
     - android-25
 
-  
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your testss
-     - sys-img-armeabi-v7a-android-22
-    #- sys-img-armeabi-v7a-android-17
-
+    # Support library
+    - extra-android-support
+    - extra-android-m2repository
